# govctl

./: .gitignore  .govctlignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  RED_TEAM.md  RUNBOOK.md  lessons.md  sprint-status.yaml
.github/: governance-dropin.yml
.github/actions/govctl-validate/: action.yml  install.sh
.github/workflows/: ci.yml  release.yml
src/: decisions.rs  main.rs  repo_scan.rs  templates.rs
src/commands/: init.rs  mod.rs  validate.rs
templates/: AGENTS.md  CLAUDE.md  DECISIONS.md  RED_TEAM.md  RUNBOOK.md  govctlignore.default  lessons.md  sprint-status.yaml
tests/: cli.rs  version_pins.rs
