[package]
name = "govctl"
version = "0.2.0"
edition = "2021"
description = "Governance-stack scaffolder and decision-drift detector"
license = "MIT"
repository = "https://github.com/bniceley50/govctl"
readme = "README.md"

[[bin]]
name = "govctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
