[package]
name = "decision-drift"
version = "0.3.4"
edition = "2021"
description = "Detect drift between your DECISIONS.md / ADR log and your actual code and git history. Installs the `govctl` command."
license = "MIT"
repository = "https://github.com/bniceley50/govctl"
readme = "README.md"
keywords = ["governance", "adr", "decisions", "ci", "documentation"]
categories = ["command-line-utilities", "development-tools"]

# The package is `decision-drift`; the installed command stays `govctl`.
[[bin]]
name = "govctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
